--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #fff;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -61,10 +62,10 @@ body {
   flex-direction: column;
   height: 100%;
   background-color: #fff;
-  color: #222;
-  font-family: "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  color: #b45f4d;
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 19px;
+  line-height: 1.57;
   padding: 0;
   margin: 0;
 }
@@ -77,16 +78,16 @@ img {
 
 /* FOCUS-STYLES  */
 *:focus {
-  outline: 3px dashed var(black);
+  outline: 3px dashed #b4604d;
   outline-offset: 3px;
 }
 
 /* CONTAINER  */
 .container {
-  max-width: 1200px;
+  max-width: 1340px;
   width: 100%;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -108,4 +109,98 @@ img {
 /* MAIN-CONTENT  */
 .main-content {
   flex-grow: 1;
+}
+
+
+/* SITE-HEADER  */
+.site-header {
+  background-color: #b36050;
+}
+
+.site-header__container {
+  display: flex;
+  flex-direction: column;
+}
+
+.site-header__top {
+  color: #f1d3b9;
+  font-style: 17px;
+  text-align: center;
+  padding: 10px;
+}
+
+.site-header__main {
+  background-color: #f6f4ec;
+}
+
+.site-header__main-container {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.sitenav__list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 32px;
+}
+
+.sitenav__link {
+  display: block;
+  text-decoration: none;
+  color: #b4604d;
+}
+
+.site-header__logo {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.logo {
+  display: flex;
+  flex-shrink: 0;
+}
+
+.logo__img {
+  display: block;
+  width: 120px;
+  height: 56px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.site-header__auth {
+  display: flex;
+  align-items: center;
+}
+
+.auth__link {
+  font-size: 14px;
+  color: #b45f4d;
+  text-decoration: none;
+  margin-right: 19px;
+}
+
+.auth__store {
+  display: flex;
+  align-items: center;
+}
+
+.store__count {
+  margin-left: 4px;
+  font-size: 15px;
+  line-height: auto;
+}
+
+.strore__img {
+  display: block;
+  width: 20px;
+  height: 22px;
+  order: -1;
 }
