--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-/* CUSTOM-PROPS */
-:root {
-  --black: #000;
-}
-
-/* FONT-FACE  */
-
 /* LOADER  */
 .loader-wrapper {
   display: flex;
@@ -121,6 +114,10 @@ img {
 /* SITE-HEADER  */
 .site-header {
   background-color: #b36050;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
 }
 
 .site-header__container {
@@ -227,11 +224,11 @@ img {
 }
 
 .hero__bg {
+  margin-top: 116px;
   min-height: 435px;
   background-image: url(../img/hero-bg.jpg);
   background-position: center center;
   background-size: cover;
-  background-attachment: fixed;
 }
 
 .hero__content {
@@ -342,4 +339,47 @@ img {
   height: 9px;
   object-fit: cover;
   object-position: center;
+}
+
+/* SECTION-CTA  */
+
+.section-cta {
+  padding-top: 34px;
+  padding-bottom: 34px;
+}
+
+.section-cta__container {
+  position: relative;
+  min-height: 408px;
+  background-image: url(../img/cta-bg.jpg);
+  background-size: cover;
+  background-position: center center;
+}
+
+.section-cta__content {
+  position: absolute;
+  bottom: 45px;
+  left: 0;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 30px;
+}
+
+.cta-content {
+  color: #fff;
+  background-color: #df9b7a;
+}
+
+.cta-content__title {
+  font-size: 20px;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.cta-content__button {
+  color: inherit;
+  font-size: 18px;
+  text-transform: capitalize;
 }
