--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,15 @@ img {
 .button {
   display: inline-block;
   text-decoration: none;
+  transition: opacity 0.2s ease;
+}
+
+.button:hover {
+  opacity: 0.8;
+}
+
+.button:active {
+  opacity: 0.6;
 }
 
 
@@ -382,4 +391,59 @@ img {
   color: inherit;
   font-size: 18px;
   text-transform: capitalize;
+}
+
+
+/* SECTION-INFO  */
+.section-info {
+  background-color: #f1d3b9;
+}
+
+.section-info__container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 97px;
+  padding-bottom: 67px;
+}
+
+.section-info__content {
+  display: flex;
+  align-items: center;
+  padding: 42px;
+  width: 100%;
+  max-width: 500px;
+  background-color: #fff;
+}
+
+.section-cta__content-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.section-info__title {
+  margin-top: 0;
+  margin-bottom: 22px;
+  font-size: 30px;
+  font-weight: 400;
+  text-transform: capitalize;
+}
+
+.section-info__description {
+  margin-top: 0;
+  margin-bottom: 40px;
+}
+
+.section-info__button {
+  text-transform: capitalize;
+  color: #b45f4d;
+}
+
+.section-info__img {
+  display: block;
+  width: 500px;
+  height: 750px;
+  object-fit: cover;
+  object-position: center;
+  order: -1;
 }
