--- a/css/styles.css
+++ b/css/styles.css
@@ -138,11 +138,14 @@ select:-webkit-autofill:focus {
 /* SITE-HEADER  */
 .site-header {
   background-color: #b36050;
+  z-index: 100;
+}
+
+.site-header--fixed {
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
-  z-index: 100;
 }
 
 .site-header__container {
